<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.scomps.www.assignment2_fantasysoccer.LauncherActivity">

    <TextView android:text="@string/ApplicationTitle" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="56dp"
        android:id="@+id/applicationTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/applicationSubTitle"
        android:id="@+id/applicationSubTitle"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/applicationTitle"
        android:textSize="18dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLauncherMsg"
        android:id="@+id/startBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:nestedScrollingEnabled="false"
        android:textSize="36sp"
        android:onClick="startBtnClicked"/>

</RelativeLayout>
